--- a/springxd-ec2/pom.xml
+++ b/springxd-ec2/pom.xml
@@ -39,9 +39,9 @@
 	    	<version>1.9.0</version>
 	    </dependency>
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-core</artifactId>
-			<version>4.0.0.RELEASE</version>
+  			<groupId>org.springframework</groupId>
+  			<artifactId>spring-core</artifactId>
+  			<version>[4.3.17,)</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
